# oh-my-quant

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  ROADMAP.md  bunfig.toml  package.json  pyproject.toml  tsconfig.json
.claude/: mcp.json  settings.local.json
benchmark/: README.md  SKILL.md
benchmark/data/: 000001_SZ_daily.csv  alpha_manifest.json  csi300_constituents.csv  watchlist.json
benchmark/metrics/: __init__.py  advanced.py  annualized_volatility.html  car_mdd.html  cumulative_return.html  dashboard.html  kline.html  kline_000001.html  kline_000300.html  max_dd.html  portfolio_predict.py  profit.html  report.py  sharpe.html  ulcer.html  win_rate.html
benchmark/reports/: dashboard.html  kline_000001.html  kline_000300.html
benchmark/results/: buy_hold_2026-05-22.json  gtja191_001_2026-05-25.json  low_vol_q1_2026-05-22.json  (+8 more)
cli/: __init__.py  main.py
docs/: DESIGN.md  agent-loop-context.md  agent-system-spec.md  artifacts-design.md  builtin-tool-registry.md  cli-manual.md  doctor-design-and-hints.md  funder.md  interactive-cli-design.md  module-architecture.md  notes.md  ohquant-storage-policy.md  pi-agent-loop-harness.md  quant-tools-design.md  reference.md  skills.md  source-data-providers.md  trader-skills.md  tui-layout-design.md  tui-table-chart-render.md
notes/: README.md
scripts/: generate-insights.ts  provider-smoke.ts
skills/: __init__.py
src/: app-runtime.test.ts  app-runtime.ts  app-tui.ts  app.ts  app.tsx  index.test.ts  index.ts  perf.ts
whyj/: .gitignore  package.json
(+326 files in other folders)
