[project]
name = "whyj-quant"
version = "0.1.0"
description = "oh-my-quant CLI — 串接 8 个量化 skills 的命令行入口"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "akshare>=1.18.63",
    "plotly>=6.7.0",
    "yfinance>=1.4.0",
]

[project.optional-dependencies]
extra = [
    "akshare>=1.14",
    "yfinance>=0.2",
    "backtrader>=1.9",
    "scipy>=1.12",
    "matplotlib>=3.7",
]

[project.scripts]
whyj-quant = "whyj_quant.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whyj_quant"]
