[project]
name = "whyj-quant"
version = "0.2.0"
description = "Minimal quant CLI for data, factor, backtest, risk, and benchmark workflows"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pandas>=2.0",
    "numpy>=1.26",
    "akshare>=1.18.63",
    "baostock>=0.8.8",
    "yfinance>=1.4.0",
]

[project.scripts]
whyj-quant = "cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "ROADMAP.md",
    "README.md",
    "benchmark/**",
    "cli/**",
    "skills/**",
]

[tool.hatch.build.targets.wheel]
packages = ["benchmark", "cli", "skills"]
